--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           data-id="1" data-name="Quantum X Earbuds" data-price="89.99" data-oldprice="112.99">
           <div class="relative overflow-hidden h-60">
             <img
-              src="https://images.unsplash.com/photo-1546868871-7041f2a55e12?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1064&q=80"
+              src="images/watch.jpg"
               alt="Wireless Earbuds" class="product-image w-full h-full object-cover">
             <div class="absolute top-4 right-4">
               <button
@@ -254,7 +254,7 @@
           data-id="2" data-name="Ultra HD Smart TV" data-price="899.99">
           <div class="relative overflow-hidden h-60">
             <img
-              src="https://images.unsplash.com/photo-1593784991095-a205069470b6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+              src="images/ultra hd.jpg"
               alt="Smart TV" class="product-image w-full h-full object-cover">
             <div class="absolute top-4 right-4">
               <button
@@ -290,7 +290,7 @@
           data-id="3" data-name="Horizon Pro Laptop" data-price="1299.99">
           <div class="relative overflow-hidden h-60">
             <img
-              src="https://images.unsplash.com/photo-1593642632823-8f785ba67e45?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1032&q=80"
+              src="images/horizon pro.jpg"
               alt="Laptop" class="product-image w-full h-full object-cover">
             <div class="absolute top-4 right-4">
               <button
@@ -330,7 +330,7 @@
           data-id="4" data-name="Smart Home Hub" data-price="249.99" data-oldprice="299.99">
           <div class="relative overflow-hidden h-60">
             <img
-              src="https://images.unsplash.com/photo-1558002038-1055907df827?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+              src="images/smart home.jpg"
               alt="Smart Home Hub" class="product-image w-full h-full object-cover">
             <div class="absolute top-4 right-4">
               <button
@@ -414,7 +414,7 @@
         <div class="md:w-1/2 relative">
           <div class="relative max-w-md mx-auto">
             <img
-              src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+              src="images/srolling code.jpg"
               alt="Tech Support" class="rounded-2xl shadow-2xl border-8 border-white">
           </div>
         </div>
@@ -600,7 +600,7 @@
         <div class="cart-item flex items-center p-3 bg-gray-50 dark:bg-dark-700 rounded-lg" data-id="1">
           <div class="w-20 h-20 rounded-md overflow-hidden mr-4">
             <img
-              src="https://images.unsplash.com/photo-1546868871-7041f2a55e12?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1064&q=80"
+              src="images/watch.jpg"
               alt="Wireless Earbuds" class="w-full h-full object-cover">
           </div>
           <div class="flex-grow">
@@ -630,7 +630,7 @@
         <div class="cart-item flex items-center p-3 bg-gray-50 dark:bg-dark-700 rounded-lg" data-id="2">
           <div class="w-20 h-20 rounded-md overflow-hidden mr-4">
             <img
-              src="https://images.unsplash.com/photo-1593784991095-a205069470b6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+              src="images/ultra hd.jpg"
               alt="Smart TV" class="w-full h-full object-cover">
           </div>
           <div class="flex-grow">
@@ -660,7 +660,7 @@
         <div class="cart-item flex items-center p-3 bg-gray-50 dark:bg-dark-700 rounded-lg" data-id="4">
           <div class="w-20 h-20 rounded-md overflow-hidden mr-4">
             <img
-              src="https://images.unsplash.com/photo-1558002038-1055907df827?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+              src="images/smart home.jpg"
               alt="Smart Home Hub" class="w-full h-full object-cover">
           </div>
           <div class="flex-grow">
@@ -734,7 +734,7 @@
       <div class="wishlist-item flex items-center p-3 bg-gray-50 dark:bg-dark-700 rounded-lg" data-id="3">
         <div class="w-20 h-20 rounded-md overflow-hidden mr-4">
           <img
-            src="https://images.unsplash.com/photo-1593642632823-8f785ba67e45?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1032&q=80"
+            src="images/horizon pro.jpg"
             alt="Laptop" class="w-full h-full object-cover">
         </div>
         <div class="flex-grow">
