--- a/index.html
+++ b/index.html
@@ -154,10 +154,12 @@
             Discover the latest TVs, smartwatches, home electronics and more with unbeatable prices and fast delivery.
           </p>
           <div class="flex space-x-4">
-            <button id="shop-now-btn"
+            <a href="store/index.html">
+              <button id="shop-now-btn"
               class="px-8 py-3 bg-primary-light dark:bg-primary-dark text-white rounded-full font-medium hover:opacity-90 transform hover:scale-105 shadow-lg">
               Shop Now
             </button>
+            </a>
             <button id="explore-btn"
               class="px-8 py-3 border-2 border-gray-300 dark:border-dark-700 rounded-full font-medium hover:bg-gray-100 dark:hover:bg-dark-800 transform hover:scale-105">
               Explore
